------------------------------------------------------------------------------
CHANGELOG
------------------------------------------------------------------------------
2006-10-31  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* data/Makefile.am:
	* glade/glchess.glade: Properly install icon.

2006-10-30  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gtkui/gtkui.py: Silence a GtkWarning. 

2006-10-30  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gtkui/gtkui.py: Fix closing of the about-dialog.

2006-10-30  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* textures/glchess.svg:
	* textures/Makefile.am:
	* data/glchess.svg:
	* data/Makefile.am: Move glchess.svg from textures to data directory.

2006-10-30  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* setup.py: Remove setup.py, which has been replaced by makefiles.

2006-10-23 vers. 1.0 RC1
        o AI options can be entered into the AI configuration file.
        o Game defaults to human (white) versus the first detected AI.
	o Lightened 3D models.
	o Updated German translation from Rosetta.
	o Changed AI file IO and animation from polled to event driven to save
	  CPU.

2006-10-20
        o Fix bug with long castling.
	o AI configuration moved into XML file.

------------------------------------------------------------------------------
2006-10-18 vers. 0.9.12
        o Gracefully handle (disable) missing stock icons.

2006-10-13
        o Updated German translation from launchpad.net.
	o Added Turkish translation (Thanks to Hakan Bekdas
	  <hakanbekdas@yahoo.com>).

2006-10-11
        o Finished converting all internal move formats to LAN.
        o Added support for Universal Chess Interface (UCI) chess engines.
        o Added support for Glaurung engine (UCI).

2006-10-05
        o Updated translations from Rosetta (new fr and es).

2006-10-04
        o Fix bug with decoding promotion from CECP engines.
	o Refactored SAN and LAN en/decoding, changed much of the integer