@@ -51,4 +51,19 @@
   <option name="Ponder" type="check">true</option>
 </ai>
 
+<ai type="cecp">
+  <name>HoiChess</name>
+  <binary>hoichess</binary>
+</ai>
+
+<ai type="uci">
+  <name>Diablo</name>
+  <binary>diablo</binary>
+</ai>
+
+<ai type="uci">
+  <name>BBChess</name>
+  <binary>bbchess</binary>
+</ai>
+
 </aiconfig>
